@@ -9,4 +9,4 @@ Makefile.in
 gnome-thumbnail-font
 gnome-font-viewer
 font-method.directory
-
+fontilus.schemas
