@@ -1,0 +1,109 @@
+<?xml version="1.0"?>
+<gconfschemafile>
+  <schemalist>
+    <schema>
+      <key>/schemas/desktop/gnome/thumbnailers/application@x-font-ttf/command</key>
+      <applyto>/desktop/gnome/thumbnailers/application@x-font-ttf/command</applyto>
+      <type>string</type>
+      <default>gnome-thumbnail-font %u %o</default>
+      <locale name="C">
+        <short>Thumbnail command for TrueType fonts</short>
+        <long>
+          Set this key to the command used to create thumbnails for
+          TrueType fonts.
+        </long>
+      </locale>
+    </schema>
+    <schema>
+      <key>/schemas/desktop/gnome/thumbnailers/application@x-font-ttf/enable</key>
+      <applyto>/desktop/gnome/thumbnailers/application@x-font-ttf/enable</applyto>
+      <type>bool</type>
+      <default>true</default>
+      <locale name="C">
+        <short>Whether to thumbnail TrueType fonts</short>
+        <long>
+          If set to true, then TrueType fonts will be thumbnailed.
+        </long>
+      </locale>
+    </schema>
+
+    <schema>
+      <key>/schemas/desktop/gnome/thumbnailers/application@x-font-type1/command</key>
+      <applyto>/desktop/gnome/thumbnailers/application@x-font-type1/command</applyto>
+      <type>string</type>
+      <default>gnome-thumbnail-font %u %o</default>
+      <locale name="C">
+        <short>Thumbnail command for Type1 fonts</short>
+        <long>
+          Set this key to the command used to create thumbnails for
+          Type1 fonts.
+        </long>
+      </locale>
+    </schema>
+    <schema>
+      <key>/schemas/desktop/gnome/thumbnailers/application@x-font-type1/enable</key>
+      <applyto>/desktop/gnome/thumbnailers/application@x-font-type1/enable</applyto>
+      <type>bool</type>
+      <default>true</default>
+      <locale name="C">
+        <short>Whether to thumbnail Type1 fonts</short>
+        <long>
+          If set to true, then Type1 fonts will be thumbnailed.
+        </long>
+      </locale>
+    </schema>
+
+    <schema>
+      <key>/schemas/desktop/gnome/thumbnailers/application@x-font-pcf/command</key>
+      <applyto>/desktop/gnome/thumbnailers/application@x-font-pcf/command</applyto>
+      <type>string</type>
+      <default>gnome-thumbnail-font %u %o</default>
+      <locale name="C">
+        <short>Thumbnail command for PCF fonts</short>
+        <long>
+          Set this key to the command used to create thumbnails for
+          PCF fonts.
+        </long>
+      </locale>
+    </schema>
+    <schema>
+      <key>/schemas/desktop/gnome/thumbnailers/application@x-font-pcf/enable</key>
+      <applyto>/desktop/gnome/thumbnailers/application@x-font-pcf/enable</applyto>
+      <type>bool</type>
+      <default>true</default>
+      <locale name="C">
+        <short>Whether to thumbnail PCF fonts</short>
+        <long>
+          If set to true, then PCF fonts will be thumbnailed.
+        </long>
+      </locale>
+    </schema>
+
+    <schema>
+      <key>/schemas/desktop/gnome/thumbnailers/application@x-font-otf/command</key>
+      <applyto>/desktop/gnome/thumbnailers/application@x-font-otf/command</applyto>
+      <type>string</type>
+      <default>gnome-thumbnail-font %u %o</default>
+      <locale name="C">
+        <short>Thumbnail command for OpenType fonts</short>
+        <long>
+          Set this key to the command used to create thumbnails for
+          OpenType fonts.
+        </long>
+      </locale>
+    </schema>
+    <schema>
+      <key>/schemas/desktop/gnome/thumbnailers/application@x-font-otf/enable</key>
+      <applyto>/desktop/gnome/thumbnailers/application@x-font-otf/enable</applyto>
+      <type>bool</type>
+      <default>true</default>
+      <locale name="C">
+        <short>Whether to thumbnail OpenType fonts</short>
+        <long>
+          If set to true, then OpenType fonts will be thumbnailed.
+        </long>
+      </locale>
+    </schema>
+
+  </schemalist>
+</gconfschemafile>
